--- a/includes/side-bar.html
+++ b/includes/side-bar.html
@@ -65,6 +65,34 @@
         <li><a href="#"><span class="lbl">opção #</span></a></li>
       </ul>
     </li>
+    <li class="grey with-sub">
+	            <span>
+	                <span class="font-icon font-icon-burger"></span>
+	                <span class="lbl">Nested Menu</span>
+	            </span>
+      <ul>
+        <li><a href="#"><span class="lbl">Level 1</span></a></li>
+        <li><a href="#"><span class="lbl">Level 1</span></a></li>
+        <li class="with-sub">
+	                    <span>
+	                        <span class="lbl">Level 2</span>
+	                    </span>
+          <ul>
+            <li><a href="#"><span class="lbl">Level 2</span></a></li>
+            <li><a href="#"><span class="lbl">Level 2</span></a></li>
+            <li class="with-sub">
+	                            <span>
+	                                <span class="lbl">Level 3</span>
+	                            </span>
+              <ul>
+                <li><a href="#"><span class="lbl">Level 3</span></a></li>
+                <li><a href="#"><span class="lbl">Level 3</span></a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </li>
   </ul>
 
   <section>
@@ -104,43 +132,4 @@
   </section>
 </nav><!--.side-menu-->
 
-<!-- gambiarra para o angular enxergar o jquery dentro deste menu. Jogar isso fora, pois este código ja existe!  -->
-<script>
-  $(document).ready(function () {
-    $('.side-menu-list li.with-sub').each(function () {
-      var parent = $(this),
-              clickLink = parent.find('>span'),
-              subMenu = parent.find('ul');
-
-      clickLink.click(function () {
-        if (parent.hasClass('opened')) {
-          parent.removeClass('opened');
-          subMenu.slideUp("slow");
-        } else {
-          $('.side-menu-list li.with-sub').not(this).removeClass('opened').find('ul').slideUp("slow");
-          parent.addClass('opened');
-          subMenu.slideDown("slow");
-        }
-      });
-    });
-
-    // Left mobile menu
-    $('.hamburger').click(function () {
-      if ($('body').hasClass('menu-left-opened')) {
-        $(this).removeClass('is-active');
-        $('body').removeClass('menu-left-opened');
-        $('html').css('overflow', 'auto');
-      } else {
-        $(this).addClass('is-active');
-        $('body').addClass('menu-left-opened');
-        $('html').css('overflow', 'hidden');
-      }
-    });
-
-    $('.mobile-menu-left-overlay').click(function () {
-      $('.hamburger').removeClass('is-active');
-      $('body').removeClass('menu-left-opened');
-      $('html').css('overflow', 'auto');
-    });
-  });
-</script>
+<script src="../../js/app.js"></script>
