Ajuste em unidades

--- a/css/less/flow/flow-core.less
+++ b/css/less/flow/flow-core.less
@@ -286,6 +286,11 @@ address, dl, ol, p, ul {
   position: fixed;
 }
 
+.nowrap{
+  white-space: nowrap;
+}
+
+
 // ---------------------------------------------------------------
 //Cores
 .text-white {
