Ajustes em todas as telas: Remoção do angular; Reajustes dos includes; Reajustes no csss's;

--- a/css/less/flow/flow-core.less
+++ b/css/less/flow/flow-core.less
@@ -7,7 +7,7 @@ body {
 }
 
 html, button, input, select, textarea {
-  font-family:@font-text;
+  font-family: @font-text;
 }
 
 h1,
@@ -286,10 +286,9 @@ address, dl, ol, p, ul {
   position: fixed;
 }
 
-.nowrap{
+.nowrap {
   white-space: nowrap;
 }
-
 
 // ---------------------------------------------------------------
 //Cores
@@ -370,7 +369,7 @@ a.toggle-icon {
   a.toggle-icon {
     border-bottom: none;
   }
-  .row-b-t-0 td{
+  .row-b-t-0 td {
     border-top: none !important;
   }
 }
@@ -398,13 +397,144 @@ td.hiddenrow {
   margin: 0 !important;
 }
 
-
 // Backgrounds genericos
-.bck-analitcs-grey{
+.bck-analitcs-grey {
   background: url("../img/statistic-box-gray.png") 50% 50% no-repeat;
 }
 
 // Esconder qualquer coisa
-.hidden-iten{
+.hidden-iten {
   display: none;
 }
+
+/* Cores genéricas, para textos */
+
+.text-red {
+  color: @red !important;
+  & a {
+    color:;
+  }
+}
+
+.text-yellow {
+  color: @yellow !important;
+  & a {
+    color: @yellow;
+  }
+}
+
+.text-aqua {
+  color: @aqua !important;
+  & a {
+    color: @aqua;
+  }
+}
+
+.text-blue {
+  color: @blue !important;
+  & a {
+    color: @blue;
+  }
+}
+
+.text-black {
+  color: @black !important;
+  & a {
+    color: @black;
+  }
+}
+
+.text-light-blue {
+  color: @light-blue !important;
+  & a {
+    color: @light-blue;
+  }
+}
+
+.text-green {
+  color: @green !important;
+  & a {
+    color: @green;
+  }
+}
+
+.text-navy {
+  color: @navy !important;
+  & a {
+    color: @navy;
+  }
+}
+
+.text-teal {
+  color: @teal !important;
+  & a {
+    color: @teal;
+  }
+}
+
+.text-olive {
+  color: @olive !important;
+  & a {
+    color: @olive;
+  }
+}
+
+.text-lime {
+  color: @lime !important;
+  & a {
+    color: @lime;
+  }
+}
+
+.text-orange {
+  color: @orange !important;
+  & a {
+    color: @orange;
+  }
+}
+
+.text-fuchsia {
+  color: @fuchsia !important;
+  & a {
+    color: @fuchsia;
+  }
+}
+
+.text-purple {
+  color: @purple !important;
+  & a {
+    color: @purple;
+  }
+}
+
+.text-maroon {
+  color: @maroon !important;
+  & a {
+    color: @maroon;
+  }
+}
+
+.text-light-grey {
+  color: @light-grey !important;
+  & a {
+    color: @light-grey;
+  }
+}
+
+/*
+text-red
+text-yellow
+text-aqua
+text-blue
+text-black
+text-light-blue
+text-green
+text-navy
+text-teal
+text-olive
+text-lime
+text-orange
+text-fuchsia
+text-purple
+text-maroon
+*/
