--- a/css/less/flow/flow-variables.less
+++ b/css/less/flow/flow-variables.less
@@ -30,7 +30,7 @@
 @black: #222;
 @gray: #eaeaec;
 @white: #ffffff;
-
+@light-grey:#a7b3bb;
 
 //Cores de elementos especificos do ctj
 @blue-ctj: #2e3192;
