--- a/css/less/flow/flow-box-typical.less
+++ b/css/less/flow/flow-box-typical.less
@@ -48,6 +48,7 @@
         text-align: center;
         width: 1%;
         padding-top: 17px;
+        font-weight: 700;
         .action-btn {
           margin: 0;
           white-space: nowrap;
@@ -220,6 +221,15 @@
     }
     .box-typical-header .action-btn .font-icon-minus:before {
       content: "\e07a";
+    }
+  }
+  .table-box-typical{
+    thead th{
+      border:solid #d8e2e7;
+      border-width:  0 0 1px 0;
+    }
+    & th{
+
     }
   }
 }
