Reajustes globais, e melhorias na area de telefones

--- a/css/less/flow/flow-box-typical.less
+++ b/css/less/flow/flow-box-typical.less
@@ -20,7 +20,7 @@
 
     .tbl-cell {
       vertical-align: middle;
-      padding: 15px;
+      padding: 10px 15px;
       &.tbl-cell-title {
         padding-right: 0;
         h1, h2, h3, h4, h5, h6 {
@@ -30,12 +30,25 @@
           line-height: 1.4;
           padding: 1px 0;
         }
-        h1 { font-size: 2.5rem; margin-top: 0; }
-        h2 { font-size: 2rem; }
-        h3 { font-size: 1.75rem; }
-        h4 { font-size: 1.5rem; }
-        h5 { font-size: 1.25rem; }
-        h6 { font-size: 1rem; }
+        h1 {
+          font-size: 2.5rem;
+          margin-top: 0;
+        }
+        h2 {
+          font-size: 2rem;
+        }
+        h3 {
+          font-size: 1.75rem;
+        }
+        h4 {
+          font-size: 1.5rem;
+        }
+        h5 {
+          font-size: 1.25rem;
+        }
+        h6 {
+          font-size: 1rem;
+        }
       }
       &.tbl-cell-actions {
         text-align: right;
@@ -197,6 +210,7 @@
         h1, h2, h3, h4, h5, h6 {
           font-size: 1.5rem /*24/16*/;
         }
+        padding: 10px 15px;
       }
       .action-btn {
         .font-icon-expand:before {
@@ -223,12 +237,12 @@
       content: "\e07a";
     }
   }
-  .table-box-typical{
-    thead th{
-      border:solid #d8e2e7;
-      border-width:  0 0 1px 0;
+  .table-box-typical {
+    thead th {
+      border: solid #d8e2e7;
+      border-width: 0 0 1px 0;
     }
-    & th{
+    & th {
 
     }
   }
