--- a/css/less/flow/template/partials/interface.less
+++ b/css/less/flow/template/partials/interface.less
@@ -223,7 +223,7 @@ hr {
 
 /* ==========================================================================
    Buttons
-   ========================================================================== */
+   ==========================================================================
 
 .btn {
   border-radius: 3px;
@@ -303,7 +303,7 @@ hr {
   &.btn-info,
   &.btn-warning,
   &.btn-danger {
-    color: #fff !important;
+    color: #fff;
   }
   &.btn-default {
     background-color: @color-grey;
@@ -501,6 +501,9 @@ a.btn-square-icon {
   color: @color-grey-blue-txt;
   padding-top: 11px;
 }
+
+
+*/
 
 /* ==========================================================================
    Labels
