--- a/css/less/flow/flow-btns.less
+++ b/css/less/flow/flow-btns.less
@@ -23,3 +23,36 @@
 
   }
 }
+
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 2px 0 0 5px;
+  line-height: 1.428571429;
+  border-radius: 15px;
+  &.btn-sm {
+    width: 25px;
+    height: 25px;
+    padding: 2px 0 0 5px;
+    font-size: 13px;
+    line-height: 1.33;
+    border-radius: 25px;
+  }
+  &.btn-lg {
+    width: 50px;
+    height: 50px;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.33;
+    border-radius: 25px;
+  }
+  &.btn-xl {
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    font-size: 24px;
+    line-height: 1.33;
+    border-radius: 35px;
+  }
+}
