--- a/css/less/flow/flow-forms.less
+++ b/css/less/flow/flow-forms.less
@@ -7,6 +7,19 @@
   border-radius: 3px;
 }
 
+.select2-container--default .select2-selection--single .select2-selection__arrow,
+.select2-container--arrow .select2-selection--single .select2-selection__arrow,
+.select2-container--white .select2-selection--single .select2-selection__arrow {
+  position: absolute;
+  height: 88%;
+  top: 1px;
+  right: 1px;
+  width: 23px;
+  text-align: center;
+  background: #ffffff;
+  border-radius: 0 .25rem .25rem 0;
+}
+
 /* ==========================================================================
    Validações
    ========================================================================== */
