Ajustes nas tabelas

--- a/css/less/flow/template/partials/vars.less
+++ b/css/less/flow/template/partials/vars.less
@@ -18,7 +18,7 @@
 @color-bg-black-blue: #323a44;
 @color-bg-page: #eceff4;
 @color-bg-grey: #ecf2f5;
-@color-bg-grey-light: #f6f8fa;
+@color-bg-grey-light: #fafafa;
 @color-bg-grey-super-light: #fbfcfd;
 @color-bg-grey-new: #c3cbd2;
 @color-border: #c5d6de;
