--- a/css/less/flow/template/partials/interface.less
+++ b/css/less/flow/template/partials/interface.less
@@ -746,7 +746,7 @@ a.label-light-grey:hover {
 
 .table-active-next {
   & > td {
-    background-color: @white;
+    background-color: @white !important;
     color: #757575;
   }
   & > th {
@@ -757,7 +757,7 @@ a.label-light-grey:hover {
 
 .table-active-visual {
   & > td {
-    background-color: @color-bg-light-green;
+    background-color: @color-bg-light-green !important;
     border-bottom: 2px solid @color-grey-blue-lighter-txt;
     font-weight: 700;
   }
