--- a/css/less/flow/flow-btns.less
+++ b/css/less/flow/flow-btns.less
@@ -57,6 +57,44 @@
   }
 }
 
+
+.btn-clear {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 2px 0 0 5px;
+  line-height: 1.428571429;
+  border-radius: 0;
+  background-color: transparent !important;
+  border: none !important;
+  &.btn-sm {
+    width: 25px;
+    height: 25px;
+    padding: 2px 0 0 5px;
+    font-size: 13px;
+    line-height: 1.33;
+    border-radius: 0;
+  }
+  &.btn-lg {
+    width: 50px;
+    height: 50px;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.33;
+    border-radius: 0;
+  }
+  &.btn-xl {
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    font-size: 24px;
+    line-height: 1.33;
+    border-radius: 0;
+  }
+}
+
+
+
 // Button Sizes
 // --------------------------------------------------
 
